fix(ui): upload box covering top jump button

--- a/public/styles/comps/upload-box.less
+++ b/public/styles/comps/upload-box.less
@@ -96,6 +96,10 @@
   }
 }
 
+[data-views-current]:not([data-views-current="0"]):not([data-views-current="1"]) .upload-box {
+  margin-right: 4rem;
+}
+
 .icon-button {
   --p-icon-button-size:var(--icon-button-size, 20px);
 
