--- a/public/styles/icons.less
+++ b/public/styles/icons.less
@@ -17,7 +17,6 @@
   vertical-align: middle;
   display: inline-block;
   text-decoration: inherit;
-  width: 1em;
   margin-right: .2em;
   text-align: center;
   /* opacity: .8; */
